Update Changes. activate new API. point botocore to version used to generate SDK

--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
  - New API: AppSync
  - New API: AlexaForBusiness
  - New API: ServiceDiscovery
+ - New API: WorkMail
  - API update: IoT
  - API update: Shield
  - API update: Rekognition
