Update Changes. Update README

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Better docu generation (osoriano)
  - Documentation update: Now POD contains links from the botocore documentation
  - Bump XML::Simple dependency to 2.21 (mla)
+ - Documentation improvement: Link back to Service class from method parameters classes (castaway)
  - New API: Pricing
  - New API: CostExplorer
  - New API: Translate
