Update Changes. Simplify all the API update messages

--- a/Changes
+++ b/Changes
@@ -34,63 +34,8 @@
  - New API: FMS
  - New API: SecretsManager
  - New API: IoTAnalytics
- - API update: IoT
- - API update: Shield
- - API update: Rekognition
- - API update: Route53
- - API update: Glue
- - API update: Organizations
- - API update: CodeBuild
- - API update: StepFunctions
- - API update: WorkDocs
- - API update: CloudFormation
- - API update: Firehose
- - API update: Kinesis
- - API update: StorageGateway
- - API update: EMR
- - API update: XRay
- - API update: ACM
- - API update: S3
- - API update: ApiGateway
- - API update: ApplicationAutoscaling
- - API update: ECS
- - API update: EC2
- - API update: ELBv2
- - API update: OpsWorksCM
- - API update: WAFRegional
- - API update: WAF
- - API update: SQS
- - API update: SES
- - API update: ES
- - API update: CodeCommit
- - API update: ECR
- - API update: RDS
- - API update: DMS
- - API update: ElasticBeanstalk
- - API update: Lightsail
- - API update: SSM
- - API update: Pinpoint
- - API update: DirectConnect
- - API update: ApiGateway
- - API update: CloudFront
- - API update: Glue
- - API update: ElastiCache
- - API update: Lambda
- - API update: SSM
- - API update: CodeDeploy
- - API update: Batch
- - API update: CognitoIdp
- - API update: Greengrass
- - API update: ECS
- - API update: AutoScaling
- - API update: DynamoDB
- - API update: Glacier
- - API update: CloudDirectory
- - API update: ServiceCatalog
- - API update: CloudWatch
- - API update: AppStream
- - API update: Budgets
- - API update: LexModels
+ - New APIs: IoT1ClickDevices and IOT1ClickProjects
+ - API updates for any service up to the date of release
 
 0.36 03 Nov 2017
  - Fix Bug: #210: S3 PutObject was not working: the Content-MD5 header was not 
