New API: Signer

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - API updates for any service up to the date of release
  - New API: Macie
  - New API: DLM
+ - New API: Signer
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
