--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - New API: Macie
  - New API: DLM
  - New API: Signer
+ - New API: Chime
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
