New Service: PinpointEmail

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
  - New API: DLM
  - New API: Signer
  - New API: Chime
+ - New API: PinpointEmail
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
