--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@
  - New API: PinpointEmail
  - New API: S3Control
  - New API: PinpointSMSVoice
+ - New API: RAM
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
