New API: Route53Resolver

--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
  - New API: S3Control
  - New API: PinpointSMSVoice
  - New API: RAM
+ - New API: Route53Resolver
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
