--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@
  - New API: PinpointSMSVoice
  - New API: RAM
  - New API: Route53Resolver
+ - New API: RDSData
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
