--- a/Changes
+++ b/Changes
@@ -14,6 +14,7 @@
  - New API: Route53Resolver
  - New API: RDSData
  - New API: Quicksight
+ - New API: Amplify
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
