New API: Datasync

--- a/Changes
+++ b/Changes
@@ -15,6 +15,7 @@
  - New API: RDSData
  - New API: Quicksight
  - New API: Amplify
+ - New API: Datasync
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
