New API: Robomaker

--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@
  - New API: Quicksight
  - New API: Amplify
  - New API: Datasync
+ - New API: Robomaker
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
