--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
  - New API: Amplify
  - New API: Datasync
  - New API: Robomaker
+ - New API: Transfer
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
