New API: GlobalAccelerator

--- a/Changes
+++ b/Changes
@@ -18,6 +18,7 @@
  - New API: Datasync
  - New API: Robomaker
  - New API: Transfer
+ - New API: GlobalAccelerator
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
