--- a/Changes
+++ b/Changes
@@ -31,6 +31,7 @@
  - New API: ApiGatewayV2
  - New API: Backup
  - New API: DocDB
+ - New API: WorkLink
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
