--- a/Changes
+++ b/Changes
@@ -1,8 +1,17 @@
-0.39
+0.39 X Feb 2019
  - Paws is now installed with Module::Builder::Tiny, which speeds
    up installation (Grinzz)
+ - MojoAsyncCaller is working correctly (leonerd, bork1n)
  - Fix failing tests when AWS_CONFIG_FILE env var is set in the test environment (stevecaldwell77)
  - API updates for any service up to the date of release
+ - Fix: SNS CheckIfPhoneNumberIsOptedOut CheckIfPhoneNumberIsOptedOut ListPhoneNumbersOptedOut
+        were not working correctly
+ - MojoAsyncCaller now sleeps appropiately (leonerd)
+ - t/04_credentials.t now works if AWS_CONFIG_FILE is set in the environment (campus-explorer)
+ - Don't ship and install paws_make_testcase and xml2yaml scripts (atoomic)
+ - unstable API warnings can be silenced by setting PAWS_SILENCE_UNSTABLE_WARNINGS to 1 (meis)
+ - paws CLI doesn't add './lib' and './auto-lib' to @INC (atoomic)
+ - uninitialized value warnings solved in S3 #282 (slobo)
  - New API: Macie
  - New API: DLM
  - New API: Signer
