--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.40
+ - Fixed invocation examples of methods in SYNOPSIS when botocore provides example invocations
 
 0.39 11 Feb 2019
  - Paws is now installed with Module::Builder::Tiny, which speeds
