--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
-0.40
+0.41
+
+0.40 26 Apr 2019
  - Solve issue #324. Paws won't die when any API returns duplicate requestid headers. IAM has 
    started returning duplicate request id headers, basically rendering old versions of Paws
    unable to call IAM. Issue #324 has instructions for users of older versions of Paws.
