New API: ManagedBlockchain

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.41
  - API updates for any service up to the date of release
  - New API: Textract
+ - New API: ManagedBlockchain
 
 0.40 26 Apr 2019
  - Solve issue #324. Paws won't die when any API returns duplicate requestid headers. IAM has 
