--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+
+ - Fix for Pinpoint bug #212
+ 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
  - API updates for any service up to the date of release
