Update release date

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.41
+0.41 11 Jul 2019
  - V3 signature module has been deprecated, as all APIs use V4 signatures. Dependencies have been removed
  - Fix: Don't pass undef HTTP content to signature modules. At least pass ''. See #325
  - Fix: Fixes for PinPoint to work correctly: #212 (byterock)
