--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.42
+0.43 
+ - 
+
+0.42 02 Mar 2020
  - Fix: Let QueryCaller send an empty query parameter to signal an empty array of objects. See #375 (torrentale)
  - New API: CodeStarConnections 
  - New API: CodeStarNotifications
