Drop support for Perl 5.10
2022-06-01T18:33:32,1869,Getopt-Long-Descriptive-0.110| Configuring distribution
2022-06-01T18:33:32,1869,Getopt-Long-Descriptive-0.110| Executing /opt/hostedtoolcache/perl/5.10.1/x64/bin/perl Makefile.PL
Error: 2022-06-01T18:33:32,1869,Getopt-Long-Descriptive-0.110| Perl v5.12.0 required--this is only v5.10.1, stopped at Makefile.PL line 5.
Error: 2022-06-01T18:33:32,1869,Getopt-Long-Descriptive-0.110| BEGIN failed--compilation aborted at Makefile.PL line 5

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.45 1 Jun 2022
+ - Drop support for Perl 5.10, since Getopt-Long-Descriptive, a dependency of one of our dependencies, 
+   is supporting Perl >= 5.12.
  - Account for ContainerProfile security token expiration (dheffx)
  - Added support for Support AWS Instance Metadata Service V2 (IMDSv2) (thanks 0leksii)
 
